using Utilities;

namespace _WHY.Scripts.Boss
{
    public class BossBallBulletPool : MonoPool<BossBallBullet>
    {
        
    }
}