using Utilities;

namespace _WHY.Scripts.Boss
{
    public class BossBulletPool : MonoPool<BossBullet>
    {
        
    }
}