using Utilities;

namespace _WHY.Scripts.Enemies
{
    public class FlyingEnemyPool : MonoPool<FlyingEnemy>
    {
        
    }
}