using Utilities;

namespace _WHY.Scripts.Enemies
{
    public class WalkingEnemyPool : MonoPool<WalkingEnemy>
    {

    }
}